# is-secure

./: README.rst  pyproject.toml  requirements.txt
is_secure/: __init__.py  main.py
tests/: test_is_secure.py
