[tool.poetry]
name = "is-secure"
version = "0.1.0"
description = ""
authors = ["taher davoodi <davoodithr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
urllib3 = "^2.1.0"
ssl = "^1.16"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
urllib3 = "^2.1.0"
ssl = "^1.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
